[package]
name = "vst_spike"
version = "0.1.0"
authors = ["Danny Meyer <danny@xasopheno.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raw-window-handle = "0.3.3"
vst = { git = "https://github.com/rustaudio/vst-rs" }
winit = "0.24.0"
